--- a/v3/Makefile
+++ b/v3/Makefile
@@ -3,9 +3,12 @@
 world.out: hello.o main.o
 	cc -o world.out hello.o main.o
 
-# 自动创建 .o 文件的隐式规则:
-# xyz.o: xyz.c
-#     cc -c -o xyz.o xyz.c
+# 自动创建 hello.o 文件的隐式规则:
+# hello.o: hello.c
+#     cc -c -o hello.o hello.c
+
+# 以及 main.o 文件的隐式规则:
+# ...
 
 clean:
-	rm -f *.o *.out
+	rm -f *.o world.out
