--- a/v5/Makefile
+++ b/v5/Makefile
@@ -1,14 +1,14 @@
-# 模式规则 Pattern Rules
-
 OBJS = $(patsubst %.c,%.o,$(wildcard *.c))
+TARGET = world.out
 
-world.out: $(OBJS)
-	$(info OBJS = $(OBJS))
+$(TARGET): $(OBJS)
 	cc -o world.out $(OBJS)
 
 # 模式匹配规则：当make需要规则 xyz.o 时，自动生成一条 xyz.o: xyz.c 规则:
 %.o: %.c
-	cc -c -o $(@) $(<)
+	@# 用info打印生成的规则
+	$(info pattern rule -> $@: $<)
+	cc -c -o $@ $<
 
 clean:
-	rm -f *.o *.out
+	rm -f *.o $(TARGET)
