--- a/v5/Makefile
+++ b/v5/Makefile
@@ -2,12 +2,11 @@ OBJS = $(patsubst %.c,%.o,$(wildcard *.c))
 TARGET = world.out
 
 $(TARGET): $(OBJS)
-	cc -o world.out $(OBJS)
+	cc -o $(TARGET) $(OBJS)
 
-# 模式匹配规则：当make需要规则 xyz.o 时，自动生成一条 xyz.o: xyz.c 规则:
+# 模式匹配规则：当make需要目标 xyz.o 时，自动生成一条 xyz.o: xyz.c 规则:
 %.o: %.c
-	@# 用info打印生成的规则
-	$(info pattern rule -> $@: $<)
+	@echo 'compiling $<...'
 	cc -c -o $@ $<
 
 clean:
