--- a/v6/Makefile
+++ b/v6/Makefile
@@ -4,10 +4,14 @@ SRCS = $(wildcard *.c)
 # 根据SRCS生成 .o 文件列表:
 OBJS = $(SRCS:.c=.o)
 
+# 根据SRCS生成 .d 文件列表:
+DEPS = $(SRCS:.c=.d)
+
 TARGET = world.out
 
 # 默认目标:
-all: $(TARGET)
+$(TARGET): $(OBJS)
+	cc -o $@ $^
 
 # xyz.d 的规则由 xyz.c 生成:
 %.d: %.c
@@ -16,14 +20,12 @@ all: $(TARGET)
 	sed 's,\($*\)\.o[ :]*,\1.o $@ : ,g' < $@.tmp > $@; \
 	rm -f $@.tmp
 
+# 模式规则:
 %.o: %.c
 	$(CC) -c -o $@ $<
-
-$(TARGET): $(OBJS)
-	cc -o $@ $^
 
 clean:
 	rm -rf *.o *.d $(TARGET)
 
 # 引入所有 .d 文件:
-include $(SRCS:.c=.d)
+include $(DEPS)
