--- a/v4/Makefile
+++ b/v4/Makefile
@@ -7,8 +7,8 @@ TARGET = world.out
 
 $(TARGET): $(OBJS)
 	@echo '$$@ = $@' # 变量 $@ 表示target
-	@echo '$$< = $<' # 变量 @< 表示第一个依赖项
-	@echo '$$^ = $^' # 变量 @^ 表示所有依赖项
+	@echo '$$< = $<' # 变量 $< 表示第一个依赖项
+	@echo '$$^ = $^' # 变量 $^ 表示所有依赖项
 	$(CC) -o $@ $^
 
 clean:
